block turning into page after clicking function added

--- a/House.html
+++ b/House.html
@@ -7,24 +7,27 @@
     <link rel="stylesheet" href="idea1.css">
 </head>
 <body>
-    <nav class="bar background">
-        <u class="nav overlay">
-            <u></u><li > <a href="#home">Home</a> </li>
-            <li> <a href="#about">About</a> </li>
-            <button class="toggle-btn " onclick="toggleMenu()"> Service</button>
-            <div class="dropdown-menu" id="dropdownMenu">
-              <a href="House.html" target="_blank" rel="noreferrer">House for Rent</a>
-              <a href="House copy 2.html">Tiffin Service</a>
-              <a href="House copy.html" target="_blank" rel="noreferrer">Maid</a>
-              <a href="House copy 3.html">Electrician</a>
-            </div>
-            <li> <a href="#contact">Contact Us</a> </li></u>
-        </ul>
-        <div class="styling">
-            <input type="text" name="search" id="search" placeholder="&#128269" >
-            <button class="btn sml-btn" title="Search button" onclick=" alert('We got you my dawg, hehe!! (^_^)')">Search here</button>
-        </div>
-    </nav> 
+<nav class="bar background">
+  <ul class="nav overlay">
+    <li><a href="#home">Home</a></li>
+    <li><a href="#about">About</a></li>
+    <li>
+      <button class="toggle-btn" onclick="toggleMenu()">Service</button>
+      <div class="dropdown-menu" id="dropdownMenu">
+        <a href="House.html" target="_blank" rel="noreferrer">House for Rent</a>
+        <a href="House copy 2.html">Tiffin Service</a>
+        <a href="House copy.html" target="_blank" rel="noreferrer">Maid</a>
+        <a href="House copy 3.html">Electrician</a>
+      </div>
+    </li>
+    <li><a href="#contact">Contact Us</a></li>
+  </ul>
+  <div class="styling">
+    <input type="text" name="search" id="search" placeholder="🔍">
+    <button class="btn sml-btn" title="Search button" onclick=" alert('We got you my dawg, hehe!! (^_^)')">Search here</button>
+  </div>
+</nav>
+
     <section class="background section2" id="home">
         
             <p id="demo"></p>  </div>
@@ -38,13 +41,12 @@
         </div>
         
 
-    </section><hr class="ruler">
+    </section><hr>
     <section class="section2" id="about">
         <br><br><br><br>
         <br>
         <h1 class="heading">Why us?</h1>
     </section>
-    <hr class="ruler">
     <section class="new" id="contact">
         <h2 class="text">Contact Us</h2>
      <div class="form">
